# OOP_practice_labs_Sedishev_164

DZ5/1/: main.cpp
DZ5/2/: main.cpp
DZ5/3/: main.cpp
DZ5/4/: main.cpp
DZ5/5/: main.cpp
DZ6/: main.cpp
KT2/Circle I kvadraT/: main.cpp
KT2/bank/: main.cpp
Z1/: CMakeLists.txt  main.cpp
Z2/: CMakeLists.txt  main.cpp
Z3/: CMakeLists.txt  main.cpp
Z4/: CMakeLists.txt  main.cpp
desturct/: CMakeLists.txt  main.cpp
fab/: CMakeLists.txt  main.cpp
